--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
             align-items: center;
         }
         #container {
-            width: 80%;
+            width: 90%;
             max-width: 1000px;
             margin: 20px auto;
             padding: 20px;
             background-color: transparent;
             border-radius: 10px;
-          
         }
         #editor {
-            width: calc(100% - 20px);
+            width: 100%;
             height: 400px;
-
             background-color: #2e2e2e;
             color: #00ff00;
             border: 2px solid #00ff00;
@@ -38,47 +36,63 @@
             resize: none;
             box-shadow: 0 0 18px #444;
         }
-        
         #controls {
-            margin-top: -30px;
-            margin-bottom: 10px;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: column;
+            gap: 10px;
+            margin-bottom: 10px;
         }
         #filename {
-            flex: 1;
-            margin-right: 10px;
+            width: 100%;
             border: 2px solid #00ff00;
             background-color: #2e2e2e;
             color: #00ff00;
             padding: 10px;
             font-size: 16px;
             border-radius: 5px;
+            box-sizing: border-box;
         }
         #download {
+            width: 100%;
             background-color: #00ff00;
             color: #000000;
             border: none;
-            padding: 10px 20px;
+            padding: 10px;
             cursor: pointer;
             font-size: 16px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
-            margin-right: 20px;
+            box-sizing: border-box;
         }
         #download:hover {
             background-color: #00cc00;
         }
-        h2{
+        h2 {
             font-size: 14px;
+            margin-bottom: 20px;
+        }
+        @media (min-width: 600px) {
+            #controls {
+                flex-direction: row;
+                gap: 10px;
+                align-items: center;
+                margin-bottom: 20px;
+            }
+            #filename {
+                flex: 1;
+                margin-right: 10px;
+            }
+            #download {
+                flex: 0 0 auto;
+                margin-right: 0;
+                width: auto;
+            }
         }
     </style>
 </head>
 <body>
     <div id="container">
-        <h2>File formats <strong>txt,rtf,html,xml,json,yaml,md, etc..</strong></h2><br><br>
-
+        <h2>File formats <strong>txt, rtf, html, xml, json, yaml, md, etc...</strong></h2>
         <div id="controls">
             <input type="text" id="filename" placeholder="Enter file name with extension (e.g., file.txt)" />
             <button id="download">Download</button>
