--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Old Hacker Themed Leafpad</title>
+    <title>leafpad</title>
     <style>
         body {
-            font-family: 'Courier New', monospace;
-            background-color: #1e1e1e;
-            color: #00ff00;
+            font-family: 'Arial', sans-serif;
+            background-color: #121212; /* Dark background */
+            color: #e0e0e0; /* Light gray text */
             margin: 0;
             padding: 0;
             display: flex;
@@ -18,35 +18,39 @@
         #container {
             width: 90%;
             max-width: 1000px;
-            margin: 20px auto;
+            margin:  auto;
             padding: 20px;
-            background-color: transparent;
+            background-color: #1e1e1e; /* Darker container background */
             border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
         #editor {
             width: 100%;
             height: 400px;
-            background-color: #2e2e2e;
-            color: #00ff00;
-            border: 2px solid #00ff00;
+            background-color: #2c2c2c; /* Dark gray editor background */
+            color: #e0e0e0; /* Light gray text */
+            border: 2px solid #444; /* Slightly lighter gray border */
             padding: 10px;
             box-sizing: border-box;
             font-size: 16px;
             border-radius: 5px;
-            resize: none;
-            box-shadow: 0 0 18px #444;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+            overflow: auto;
+            white-space: pre-wrap; /* Preserve whitespace formatting */
+            display: flex;
+            flex-direction: column;
         }
         #controls {
             display: flex;
             flex-direction: column;
             gap: 10px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         #filename {
             width: 100%;
-            border: 2px solid #00ff00;
-            background-color: #2e2e2e;
-            color: #00ff00;
+            border: 2px solid #444; /* Dark gray border */
+            background-color: #2c2c2c; /* Darker input background */
+            color: #e0e0e0; /* Light gray text */
             padding: 10px;
             font-size: 16px;
             border-radius: 5px;
@@ -54,8 +58,8 @@
         }
         #download {
             width: 100%;
-            background-color: #00ff00;
-            color: #000000;
+            background-color: #4caf50; /* Soft green button */
+            color: #ffffff;
             border: none;
             padding: 10px;
             cursor: pointer;
@@ -65,11 +69,39 @@
             box-sizing: border-box;
         }
         #download:hover {
-            background-color: #00cc00;
+            background-color: #388e3c; /* Darker green on hover */
+        }
+        #format-controls {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        #format-controls button {
+            background-color: #4caf50; /* Soft green button */
+            color: #ffffff;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        #format-controls button:hover {
+            background-color: #388e3c; /* Darker green on hover */
         }
         h2 {
-            font-size: 14px;
+            font-size: 16px;
+            color: #e0e0e0; /* Light gray text */
             margin-bottom: 20px;
+        }
+        .centered {
+            text-align: center;
+        }
+        .bold {
+            font-weight: bold;
+        }
+        .italic {
+            font-style: italic;
         }
         @media (min-width: 600px) {
             #controls {
@@ -93,16 +125,31 @@
 <body>
     <div id="container">
         <h2>File formats <strong>txt, rtf, html, xml, json, yaml, md, etc...</strong></h2>
+        <div id="format-controls">
+            <button onclick="formatText('bold')">Bold</button>
+            <button onclick="formatText('italic')">Italic</button>
+            <button onclick="formatText('remove')">Normal</button>
+            <button onclick="alignText('center')">Center</button>
+        </div>
         <div id="controls">
             <input type="text" id="filename" placeholder="Enter file name with extension (e.g., file.txt)" />
             <button id="download">Download</button>
         </div>
-        <textarea id="editor" placeholder="Start typing your text here..."></textarea>
+        <div id="editor" contenteditable="true" placeholder="Start typing your text here..."></div>
     </div>
 
     <script>
+        function formatText(style) {
+            document.execCommand(style, false, null);
+        }
+
+        function alignText(alignment) {
+            document.execCommand('justify' + alignment.charAt(0).toUpperCase() + alignment.slice(1), false, null);
+        }
+
         document.getElementById('download').addEventListener('click', function() {
-            const text = document.getElementById('editor').value;
+            const editor = document.getElementById('editor');
+            const text = editor.innerText;
             if (text.trim() === '') {
                 alert('Text field is empty. Please enter some text before downloading.');
                 return;
@@ -115,6 +162,14 @@
             a.download = filename.includes('.') ? filename : `${filename}.txt`;
             a.click();
             URL.revokeObjectURL(url);
+        });
+
+        document.getElementById('editor').addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                document.execCommand('insertHTML', false, '<br><br>'); // Insert a new line
+                document.execCommand('removeFormat', false, null); // Remove formatting from the new line
+                event.preventDefault(); // Prevent default behavior
+            }
         });
     </script>
 </body>
