--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calm Themed Leafpad</title>
+    <title>Leafpad Editor</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #121212; /* Dark background */
-            color: #e0e0e0; /* Light gray text */
+            font-family: 'Courier New', monospace;
+            background-color: #1e1e1e;
+            color: #d4d4d4;
             margin: 0;
             padding: 0;
             display: flex;
@@ -20,26 +20,22 @@
             max-width: 1000px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #1e1e1e; /* Darker container background */
+            background-color: #2b2b2b;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
         #editor {
             width: 100%;
-            height: 400px;
-            background-color: #2c2c2c; /* Dark gray editor background */
-            color: #e0e0e0; /* Light gray text */
-            border: 2px solid #444; /* Slightly lighter gray border */
+            height: 450px;
+            background-color: #3b3b3b;
+            color: #d4d4d4;
+            border: 2px solid #00cc99;
             padding: 10px;
             box-sizing: border-box;
-            font-size: 16px; /* Fixed font size */
+            font-size: 14px;
             border-radius: 5px;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-            overflow: auto;
-            white-space: pre-wrap; /* Preserve whitespace formatting */
-            display: flex;
-            flex-direction: column;
-            outline: none; /* Remove default focus outline */
+            resize: none;
+            box-shadow: 0 0 18px #444;
         }
         #controls {
             display: flex;
@@ -49,9 +45,9 @@
         }
         #filename {
             width: 100%;
-            border: 2px solid #444; /* Dark gray border */
-            background-color: #2c2c2c; /* Darker input background */
-            color: #e0e0e0; /* Light gray text */
+            border: 2px solid #00cc99;
+            background-color: #3b3b3b;
+            color: #d4d4d4;
             padding: 10px;
             font-size: 16px;
             border-radius: 5px;
@@ -59,8 +55,8 @@
         }
         #download {
             width: 100%;
-            background-color: #4caf50; /* Soft green button */
-            color: #ffffff;
+            background-color: #00cc99;
+            color: #000000;
             border: none;
             padding: 10px;
             cursor: pointer;
@@ -70,46 +66,18 @@
             box-sizing: border-box;
         }
         #download:hover {
-            background-color: #388e3c; /* Darker green on hover */
-        }
-        #format-controls {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        #format-controls button {
-            background-color: #4caf50; /* Soft green button */
-            color: #ffffff;
-            border: none;
-            padding: 10px;
-            cursor: pointer;
-            font-size: 16px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        #format-controls button:hover {
-            background-color: #388e3c; /* Darker green on hover */
+            background-color: #009977;
         }
         h2 {
-            font-size: 16px;
-            color: #e0e0e0; /* Light gray text */
+            font-size: 14px;
             margin-bottom: 20px;
-        }
-        .centered {
-            text-align: center;
-        }
-        .bold {
-            font-weight: bold;
-        }
-        .italic {
-            font-style: italic;
         }
         @media (min-width: 600px) {
             #controls {
                 flex-direction: row;
                 gap: 10px;
                 align-items: center;
-                margin-bottom: 20px;
+                margin-bottom: 10px;
             }
             #filename {
                 flex: 1;
@@ -126,40 +94,16 @@
 <body>
     <div id="container">
         <h2>File formats <strong>txt, rtf, html, xml, json, yaml, md, etc...</strong></h2>
-        <div id="format-controls">
-            <button onclick="formatText('bold')">Bold</button>
-            <button onclick="formatText('italic')">Italic</button>
-            <button onclick="formatText('remove')">Normal</button>
-            <button onclick="alignText('center')">Center</button>
-        </div>
         <div id="controls">
             <input type="text" id="filename" placeholder="Enter file name with extension (e.g., file.txt)" />
             <button id="download">Download</button>
         </div>
-        <div id="editor" contenteditable="true" placeholder="Start typing your text here..."></div>
+        <textarea id="editor" placeholder="Start typing your text here..."></textarea>
     </div>
 
     <script>
-        function formatText(style) {
-            document.execCommand('styleWithCSS', false, true);
-            if (style === 'remove') {
-                document.execCommand('removeFormat', false, null);
-                return;
-            }
-            const currentStyle = style === 'bold' ? 'fontWeight' : 'fontStyle';
-            document.execCommand(style, false, null);
-            // Reset formatting for other styles
-            document.execCommand('fontWeight', false, currentStyle === 'fontWeight' ? '' : 'normal');
-            document.execCommand('fontStyle', false, currentStyle === 'fontStyle' ? '' : 'normal');
-        }
-
-        function alignText(alignment) {
-            document.execCommand('justify' + alignment.charAt(0).toUpperCase() + alignment.slice(1), false, null);
-        }
-
         document.getElementById('download').addEventListener('click', function() {
-            const editor = document.getElementById('editor');
-            const text = editor.innerText;
+            const text = document.getElementById('editor').value;
             if (text.trim() === '') {
                 alert('Text field is empty. Please enter some text before downloading.');
                 return;
@@ -172,13 +116,6 @@
             a.download = filename.includes('.') ? filename : `${filename}.txt`;
             a.click();
             URL.revokeObjectURL(url);
-        });
-
-        document.getElementById('editor').addEventListener('keydown', function(event) {
-            if (event.key === 'Enter') {
-                event.preventDefault();
-                document.execCommand('insertHTML', false, '<br>'); // Insert a new line without extra line break
-            }
         });
     </script>
 </body>
