--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             }
         }
     </style>
+    <meta name="google-site-verification" content="Y00xrEmGvhx5QmjjjaiNgfO_W8IZhZKflRetPwjvVnM" />
 </head>
 <body>
     <div id="container">
